--- a/index.html
+++ b/index.html
@@ -79,7 +79,35 @@
                 </button>
               </div>         
             </header>
-
+            <!-- Quienes Somos -->
+            <section class="container d-none d-md-block">
+                <h1 class="text-center text-white pb-4 pt-5">Quienes Somos</h1>
+                <hr>
+                <div class="row">
+                    <div class="col-4">
+                        <h5 class="fas fa-plane-departure p-1 bg-warning text-center text-white d-block fs-5"></h5>
+                        <p class="text-white">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor quam in tellus scelerisque viverra. Curabitur tempor interdum erat at consectetur. Phasellus a massa quis nunc vehicula tincidunt in eget erat. Etiam quis magna eget ex sodales posuere. Nunc neque eros, congue id sapien nec, finibus rutrum ligula. In at mauris sollicitudin, eleifend nibh eu, ullamcorper nunc. Phasellus ex urna, viverra aliquet volutpat ut, vestibulum ac enim.
+                            Pellentesque sollicitudin tortor ut sodales imperdiet. Fusce ac velit vel felis volutpat laoreet at nec arcu. Sed convallis eget nisi vitae iaculis. Mauris a tellus lorem. Etiam ante ipsum, pulvinar at elementum varius, commodo a mi. Suspendisse potenti. Integer sollicitudin felis sollicitudin porta accumsan. Vestibulum eget massa nec sem vulputate ornare non id est. 
+                        </p>
+                    </div>
+                    <div class="col-4">
+                        <h5 class="fas fa-mountain text-center p-1 bg-success text-white d-block fs-5"></h5>
+                        <p class="text-white">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor quam in tellus scelerisque viverra. Curabitur tempor interdum erat at consectetur. Phasellus a massa quis nunc vehicula tincidunt in eget erat. Etiam quis magna eget ex sodales posuere. Nunc neque eros, congue id sapien nec, finibus rutrum ligula. In at mauris sollicitudin, eleifend nibh eu, ullamcorper nunc. Phasellus ex urna, viverra aliquet volutpat ut, vestibulum ac enim.
+                            Pellentesque sollicitudin tortor ut sodales imperdiet. Fusce ac velit vel felis volutpat laoreet at nec arcu. Sed convallis eget nisi vitae iaculis. Mauris a tellus lorem. Etiam ante ipsum, pulvinar at elementum varius, commodo a mi. Suspendisse potenti. Integer sollicitudin felis sollicitudin porta accumsan. Vestibulum eget massa nec sem vulputate ornare non id est.  
+                        </p>
+                    </div>
+                    <div class="col-4">
+                        <h5 class="fas fa-route p-1 bg-primary text-center text-white d-block fs-5"></h5>
+                        <p class="text-white">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor quam in tellus scelerisque viverra. Curabitur tempor interdum erat at consectetur. Phasellus a massa quis nunc vehicula tincidunt in eget erat. Etiam quis magna eget ex sodales posuere. Nunc neque eros, congue id sapien nec, finibus rutrum ligula. In at mauris sollicitudin, eleifend nibh eu, ullamcorper nunc. Phasellus ex urna, viverra aliquet volutpat ut, vestibulum ac enim.
+                            Pellentesque sollicitudin tortor ut sodales imperdiet. Fusce ac velit vel felis volutpat laoreet at nec arcu. Sed convallis eget nisi vitae iaculis. Mauris a tellus lorem. Etiam ante ipsum, pulvinar at elementum varius, commodo a mi. Suspendisse potenti. Integer sollicitudin felis sollicitudin porta accumsan. Vestibulum eget massa nec sem vulputate ornare non id est.  
+                        </p>
+                    </div>
+                </div>
+            </section>
+            
 
       
 
