--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </head>
 <body class=" bg-info">
     <!-- Navbar  -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-0">
             <div class="container">
-              <a class="navbar-brand fs-1" href="#"> <img src="assets/img/viajes.svg" alt="logo" width="50" height="auto" class="m-0">Viajes Chile</a>
+              <a class="navbar-brand fs-3" href="#"> <img src="assets/img/viajes.svg" alt="logo" width="40" height="auto" class="m-0">Viajes Chile</a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -40,21 +40,22 @@
                 <div class="mx-auto"></div>
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link text-white fs-4" href="#">Inicio</a>
+                    <a class="nav-link text-white fs-4" href="#carouselExampleControls">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white fs-4" href="#">Quienes Somos</a>
+                    <a class="nav-link text-white fs-4" href="#quienessomos">Quienes Somos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white fs-4" href="#">Destacados</a>
+                    <a class="nav-link text-white fs-4" href="#detacados">Destacados</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white fs-4" href="#">Contacto</a>
+                    <a class="nav-link text-white fs-4" href="#contacto">Contacto</a>
                   </li>
                 </ul>
               </div>
             </div>
         </nav>
+      <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
         <!-- Header  -->
         <header>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -81,7 +82,7 @@
             </header>
             <!-- Quienes Somos -->
             <section class="container d-none d-md-block">
-                <h1 class="text-center text-white pb-4 pt-5">Quienes Somos</h1>
+                <h1 id="quienessomos" class="text-center text-white pb-4 pt-5">Quienes Somos</h1>
                 <hr>
                 <div class="row">
                     <div class="col-4">
@@ -109,7 +110,7 @@
             </section>
             <!-- Destacados -->
             <main class="container">
-                <h3 class="text-center text-white pb-4 pt-5">Destacados</h3>
+                <h3 id="detacados" class="text-center text-white pb-4 pt-5">Destacados</h3>
                 <hr>
                 <div class="row">
 
@@ -150,7 +151,7 @@
             
             <!-- Contacto -->
             <section class="container">
-                <h3 class="text-center text-white pb-4 pt-5">Contacto</h3>
+                <h3 id="contacto" class="text-center text-white pb-4 pt-5">Contacto</h3>
                 <hr>
                 <form>
                     <div class="form-group mb-4">
@@ -170,8 +171,10 @@
                     </div>
                 </form>
             </section>
+          
+      </div>
             <!--footer-->
-            <footer class="bg-dark pt-4 pb-4 " >  
+            <footer class="bg-dark pt-4 pb-4 " > 
                 <div class="text-center">
                 <h5 class="footer text-white fs-2 d-inline-block">Viajes Chile</h5>   
                 <h5 class="fab fa-twitter fs-3 text-white"></h5>
