--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="row">
 
                     <article class="col-12 col-md-3 pb-3">
-                        <div class="card text-center mx-auto" style="width: 100%;">
+                        <div class="card text-center mx-auto">
                            <img src="assets/img/card1.jpg" class="card-img1 card-img-top" alt="...">
                            <div class="card-body">             
                              <p class="card-text1">Suspendisse rutrum posuere blandit. Pellentesque id blandit nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam fermentum mauris sed rhoncus tincidunt. Aenean et odio ac leo commodo porttitor sit amet non turpis. Aenean efficitur mollis convallis. Donec dapibus est nisl, quis semper elit fermentum quis.</p>
@@ -123,7 +123,7 @@
                           </div>
                     </article>
                     <article class="col-12 col-md-3 pb-3">
-                        <div class="card text-center mx-auto" style="width: 100%;">
+                        <div class="card text-center mx-auto">
                            <img src="assets/img/card2.jpg" class="card-img2 card-img-top" alt="...">
                            <div class="card-body">             
                              <p class="card-text2">Suspendisse rutrum posuere blandit. Pellentesque id blandit nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam fermentum mauris sed rhoncus tincidunt. Aenean et odio ac leo commodo porttitor sit amet non turpis. Aenean efficitur mollis convallis. Donec dapibus est nisl, quis semper elit fermentum quis.</p>
@@ -131,7 +131,7 @@
                           </div>
                     </article>
                     <article class="col-12 col-md-3 pb-3">
-                        <div class="card text-center mx-auto" style="width: 100%;">
+                        <div class="card text-center mx-auto">
                            <img src="assets/img/card3.jpg" class="card-img3 card-img-top" alt="...">
                            <div class="card-body">             
                              <p class="card-text3">Suspendisse rutrum posuere blandit. Pellentesque id blandit nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam fermentum mauris sed rhoncus tincidunt. Aenean et odio ac leo commodo porttitor sit amet non turpis. Aenean efficitur mollis convallis. Donec dapibus est nisl, quis semper elit fermentum quis.</p>
@@ -139,7 +139,7 @@
                           </div>
                     </article>
                     <article class="col-12 col-md-3 pb-3">
-                        <div class="card text-center mx-auto" style="width: 100%;">
+                        <div class="card text-center mx-auto">
                            <img src="assets/img/card4.jpg" class="card-img4 card-img-top" alt="...">
                            <div class="card-body">             
                              <p class="card-text4">Suspendisse rutrum posuere blandit. Pellentesque id blandit nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam fermentum mauris sed rhoncus tincidunt. Aenean et odio ac leo commodo porttitor sit amet non turpis. Aenean efficitur mollis convallis. Donec dapibus est nisl, quis semper elit fermentum quis.</p>
